--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=development
+
 PORT=3000
 
 DB_TYPE=sqlite
@@ -5,3 +7,10 @@ DB_DATABASE=dev.db
 
 FUSE_API_URL=
 FUSE_API_KEY=
+
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=
