* change SQLite to PostgreSQL * added Docker support with a docker-compose setup for application, PostgreSQL, Redis, and Mailhog services. * changed email service to use SMTP configuration

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,28 @@ NODE_ENV=development
 
 PORT=3000
 
-DB_TYPE=sqlite
-DB_DATABASE=dev.db
+# Database
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=fuse_db
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
 
 FUSE_API_URL=
 FUSE_API_KEY=
 
-SMTP_HOST=
-SMTP_PORT=587
+# Email
+SMTP_HOST=mailhog
+SMTP_PORT=1025
 SMTP_SECURE=false
+SMTP_FROM=no-reply@fuse.local
+# Email (only required for production)
 SMTP_USER=
 SMTP_PASS=
-SMTP_FROM=
+
+# Report
+REPORT_CRON_EXPRESSION=*/10 * * * * * # every 10 seconds
