- update README with instructions and decisions - added unit tests and e2e tests - included Postman documentation

--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,12 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DEFAULT_TTL=60000
 
+# Fuse API
 FUSE_API_URL=
 FUSE_API_KEY=
 
 # Email
+EMAIL_REPORT_RECIPIENT=test@test.com
 SMTP_HOST=mailhog
 SMTP_PORT=1025
 SMTP_SECURE=false
